// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RenderCategories component Should render the \`DisplayCategories\` and \`DisplayControls\` components 1`] = `
<body>
  <div>
    <div>
      <div
        class="text-center col gap-3 justify-center mx-4 overflow-y-auto h-11/12 w-3/4"
        data-testid="render-categories-container"
      >
        <h1
          class="text-xl"
        >
          Choose categories
        </h1>
        <div
          class="col gap-3"
        >
          <div
            class="col gap-2"
            data-testid="display-categories-container"
          >
            <div
              class="flex gap-2 flex-wrap justify-center"
              data-testid="first-categories-set"
            >
              <span
                data-testid="Category 1"
              >
                <button
                  class="sc-bcPKhP fjXGcT"
                >
                  Category 1
                   (
                  0
                  )
                </button>
              </span>
              <span
                data-testid="Category 10"
              >
                <button
                  class="sc-bcPKhP fjXGcT"
                >
                  Category 10
                   (
                  9
                  )
                </button>
              </span>
              <span
                data-testid="Category 11"
              >
                <button
                  class="sc-bcPKhP fjXGcT"
                >
                  Category 11
                   (
                  10
                  )
                </button>
              </span>
              <span
                data-testid="Category 12"
              >
                <button
                  class="sc-bcPKhP fjXGcT"
                >
                  Category 12
                   (
                  11
                  )
                </button>
              </span>
              <span
                data-testid="Category 13"
              >
                <button
                  class="sc-bcPKhP fjXGcT"
                >
                  Category 13
                   (
                  12
                  )
                </button>
              </span>
              <span
                data-testid="Category 14"
              >
                <button
                  class="sc-bcPKhP fjXGcT"
                >
                  Category 14
                   (
                  13
                  )
                </button>
              </span>
              <span
                data-testid="Category 15"
              >
                <button
                  class="sc-bcPKhP fjXGcT"
                >
                  Category 15
                   (
                  14
                  )
                </button>
              </span>
              <span
                data-testid="Category 16"
              >
                <button
                  class="sc-bcPKhP fjXGcT"
                >
                  Category 16
                   (
                  15
                  )
                </button>
              </span>
              <span
                data-testid="Category 17"
              >
                <button
                  class="sc-bcPKhP fjXGcT"
                >
                  Category 17
                   (
                  16
                  )
                </button>
              </span>
              <span
                data-testid="Category 18"
              >
                <button
                  class="sc-bcPKhP fjXGcT"
                >
                  Category 18
                   (
                  17
                  )
                </button>
              </span>
            </div>
          </div>
          <div
            class="flex justify-center gap-4"
            data-testid="display-controls-container"
          >
            <span
              data-testid="show-more-button"
            >
              <button
                class="sc-bcPKhP coQATf"
              >
                More categories
              </button>
            </span>
            <span
              data-testid="reset-categories-button"
            >
              <button
                class="sc-bcPKhP fjXGcT"
              >
                Reset categories
              </button>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`RenderCategories component Should render the \`DisplayCategoriesMobile\` and \`DisplayControls\` components 1`] = `
<body>
  <div>
    <div>
      <div
        class="text-center col gap-3 justify-center mx-4 overflow-y-auto w-full h-3/4 py-4"
        data-testid="render-categories-container"
      >
        <h1
          class="text-xl"
        >
          Choose categories
        </h1>
        <div
          class="col gap-3"
        >
          <div
            class="px-4 overflow-y-auto"
            data-testid="display-categories-mobile-container"
          >
            <div>
              <div
                class="flex gap-2 flex-wrap justify-center"
                data-testid="first-categories-set"
              >
                <span
                  data-testid="Category 1"
                >
                  <button
                    class="sc-bcPKhP fjXGcT"
                  >
                    Category 1
                     (
                    0
                    )
                  </button>
                </span>
                <span
                  data-testid="Category 10"
                >
                  <button
                    class="sc-bcPKhP fjXGcT"
                  >
                    Category 10
                     (
                    9
                    )
                  </button>
                </span>
                <span
                  data-testid="Category 11"
                >
                  <button
                    class="sc-bcPKhP fjXGcT"
                  >
                    Category 11
                     (
                    10
                    )
                  </button>
                </span>
                <span
                  data-testid="Category 12"
                >
                  <button
                    class="sc-bcPKhP fjXGcT"
                  >
                    Category 12
                     (
                    11
                    )
                  </button>
                </span>
                <span
                  data-testid="Category 13"
                >
                  <button
                    class="sc-bcPKhP fjXGcT"
                  >
                    Category 13
                     (
                    12
                    )
                  </button>
                </span>
                <span
                  data-testid="Category 14"
                >
                  <button
                    class="sc-bcPKhP fjXGcT"
                  >
                    Category 14
                     (
                    13
                    )
                  </button>
                </span>
                <span
                  data-testid="Category 15"
                >
                  <button
                    class="sc-bcPKhP fjXGcT"
                  >
                    Category 15
                     (
                    14
                    )
                  </button>
                </span>
                <span
                  data-testid="Category 16"
                >
                  <button
                    class="sc-bcPKhP fjXGcT"
                  >
                    Category 16
                     (
                    15
                    )
                  </button>
                </span>
                <span
                  data-testid="Category 17"
                >
                  <button
                    class="sc-bcPKhP fjXGcT"
                  >
                    Category 17
                     (
                    16
                    )
                  </button>
                </span>
                <span
                  data-testid="Category 18"
                >
                  <button
                    class="sc-bcPKhP fjXGcT"
                  >
                    Category 18
                     (
                    17
                    )
                  </button>
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex justify-center gap-4"
            data-testid="display-controls-container"
          >
            <span
              data-testid="show-more-button"
            >
              <button
                class="sc-bcPKhP coQATf"
              >
                Next categories
              </button>
            </span>
            <span
              data-testid="reset-categories-button"
            >
              <button
                class="sc-bcPKhP fjXGcT"
              >
                Reset categories
              </button>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
